src/assets/styles/styles.css
/* ... */
.nav-pills .nav-link:hover {
  /*background-color: hsl(196, 12%, 17%);
  color: white;*/
  background-color: hsl(50, 100%, 50%);
  color: hsl(196, 12%, 10%);
}

/* Content - Buttons */
.btn {
  border-radius: 6px;
  transition: none;
}

.btn-primary {
  height: 3rem;
  padding: 1rem;
  line-height: 1rem;
  background-color: hsl(122, 83%, 35%);
  font-weight: 900;
  color: white;
  transition: none;
}

.btn-primary:not(:disabled):not(.disabled):hover {
  background-color: hsl(50, 100%, 50%);
  color: hsl(196, 12%, 10%);
}

.btn-primary,
.btn-primary:hover,
.btn-primary:active {
  border: none;
  box-shadow: none;
  /* 2px 2px 3px hsl(0, 0%, 0%);*/
}

.btn-primary:disabled,
.btn-primary.disabled,
.btn-primary:disabled:hover,
.btn-primary.disabled:hover {
  background-color: hsl(196, 12%, 75%);
  color: white;
}

.btn-secondary {
  height: 2.5rem;
  margin-right: 1rem;
  padding: .75rem 1rem;
  border: none;
  background-color: hsl(218, 12%, 40%);
  color: white;
  font-weight: 900;
  line-height: 1;
}

.btn-secondary:not(:disabled):not(.disabled):hover {
  background-color: hsl(50, 100%, 50%);
  color: hsl(196, 12%, 10%);
}

/* Content - Tables */
.table th {
  padding: 1rem;
}

.table .thead-dark th {
  background-color: hsl(218, 75%, 55%);
  border: 0;
}

.table-responsive {
  border: 0;
  position: relative;
}

.table-responsive thead th {
  padding: 1rem;
  text-align: left;
  vertical-align: middle;
}

.table-responsive .th-sticky {
  position: sticky;
  left: 0;
  top: 0;
  padding: .25rem 1rem;
}

.table-responsive tbody th {
  font-weight: normal;
  vertical-align: middle;
}

.table-responsive td {
  padding: 0 1rem;
  vertical-align: middle;
}

.table-responsive tbody td,
.table-responsive tbody th {
  background-color: white;
}

.table-responsive tbody tr {
  height: 3.5rem;
}

.table-hover tbody tr:hover td,
.table-hover tbody tr:hover th {
  background-color: hsl(0, 0%, 93%);
}

/* Content - Cards */
.card {
  margin-bottom: 2rem;
  border: none;
  border-radius: 0;
  background-color: unset;
}

.card-header,
.card-header:first-child {
  border: none;
  padding: 0;
  background-color: transparent;
}

.card-header h2 {
  margin-bottom: 0;
  padding: 1rem;
  background-color: hsl(277, 40%, 50%);
  border: none;
  font-weight: 900;
  font-size: 1.5rem;
  line-height: 1.5rem;
  color: white;
}

.card-header h3,
.card-header h4 {
  margin-bottom: .25rem;
  padding: 1rem;
  background-color: hsl(196, 12%, 17%);
  line-height: 1;
  font-weight: bold;
  color: white;
}

.card-header h3 {
  font-weight: 900;
}

.card-header .btn-link {
  width: 100%;
  border-radius: 6px;
  text-align: left;
  cursor: pointer;
  transition: none;
}

.card-header .btn-link:hover {
  background-color: hsl(50, 100%, 50%);
  text-decoration: none;
  color: hsl(196, 12%, 10%);
}

.card-header .collapse-icon {
  display: inline-block;
  width: 1rem;
}

.card-header .collapse-icon::before {
  content: "–";
}

.card-header .collapsed .collapse-icon::before {
  content: "+";
}

.card .card {
  margin-bottom: 0;
  border-radius: 0;
}

.card-body {
  padding: 1rem 1rem 0 1rem;
}

/* Content - Cards - Forms */
.card .row .form-inline {
  width: 100%;
  margin: 0 -1rem;
  padding: 0 1rem;
}

.card .form-inline .form-check {
  margin-bottom: 1rem;
  justify-content: flex-start;
}

.form-group > .card > .collapse > .card-body,
.form-group > .card > .collapsing > .card-body {
  padding: 0 1rem;
}

.footer {
  padding: 2rem 0;
  border-top: .5rem solid hsl(0, 91%, 50%);
  color: white;
}

.footer-brand {
  display: inline-block;
  margin-bottom: 1rem;
  font-size: 1.25rem;
  font-weight: 900;
  letter-spacing: 1px;
}

.footer-brand:hover {
  text-decoration: none;
}

.footer > .container {
  padding-left: 2rem;
}

.footer a {
  color: hsl(218, 100%, 65%);
}

.footer a:hover,
.footer a:focus {
  color: hsl(50, 100%, 50%);
}

.footer a:visited {
  color: hsl(277, 85%, 65%);
}

